--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_native_splash: ^2.4.1
   get: ^4.6.6
   shared_preferences: ^2.3.3
 
@@ -18,5 +19,12 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^3.0.0
 
+
+
+flutter_native_splash:
+  background_image: assets/images/splash_screen.png
+
 flutter:
   uses-material-design: true
+  assets:    
+    - assets/images/
