--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ app.*.map.json
 # FVM Version Cache
 .fvm/
 .fvmrc
+
+#Firebase
+ios/Runner.xcworkspace/xcshareddata/swiftpm/Package.resolved
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
