--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
+            android:extractNativeLibs="true"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
