--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   dio: ^5.8.0+1
   file_picker: ^8.3.2
+  firebase_auth: ^5.4.2
+  firebase_core: ^3.11.0
   flutter:
     sdk: flutter
   flutter_native_splash: ^2.4.1
