--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,11 @@ dependencies:
   get: ^4.6.6
   google_sign_in: ^6.2.2
   image_picker: ^1.1.2
+  intl: ^0.20.2
+  palette_generator: ^0.3.3+6
   shared_preferences: ^2.3.3
+  shimmer: ^3.0.0
+  video_player: ^2.9.2
 
 dev_dependencies:
   flutter_test:
