--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  connectivity_plus: ^6.0.0
   dio: ^5.8.0+1
   file_picker: ^8.3.2
   firebase_auth: ^5.4.2
