--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^1.1.2
   intl: ^0.20.2
   palette_generator: ^0.3.3+6
+  share_plus: ^10.1.4
   shared_preferences: ^2.3.3
   shimmer: ^3.0.0
   video_player: ^2.9.2
