--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.11.0
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.1
   flutter_svg: ^2.0.17
   get: ^4.6.6
@@ -41,6 +42,12 @@ flutter_native_splash:
   android_12: 
     color: "#131418"
     image: assets/images/splash_screen.png
+
+flutter_launcher_icons:
+  image_path_android: "assets/images/splash_screen.png"
+  image_path_ios: "assets/images/splash_screen.png"
+  android: true
+  ios: true
 
 
 flutter:
